# P3-miniapps

./: .gitmodules  AUTHORS  CMakeLists.txt  README.md  docker-compose.yml
heat3D/cuda/: CMakeLists.txt  parallel_for_each.hpp  view.hpp
heat3D/openmp/: CMakeLists.txt  types.hpp
heat3D/stdpar/: CMakeLists.txt  types.hpp
heat3D/thrust/: CMakeLists.txt  heat3D.cpp  heat3D.hpp  types.hpp
heat3d/hip/: CMakeLists.txt  heat3D.cpp  heat3D.hpp  parallel_for_each.hpp
heat3d/kokkos/: CMakeLists.txt  IO.hpp  Init.hpp  Timestep.hpp  boundary.hpp  heat3d.cpp  types.hpp  utils.hpp
heat3d/openacc/: CMakeLists.txt  Config.hpp  IO.hpp  Init.hpp  Timestep.hpp  boundary.hpp  heat3d.cpp  types.hpp
heat3d/stdpar/: CMakeLists.txt  Heat_kernel.hpp  IO.hpp  Init.hpp  Timestep.hpp  boundary.hpp  heat3D.cpp  heat3D.hpp  types.hpp
heat3d/thrust/: CMakeLists.txt  Heat_kernel.hpp  Init.hpp  Timestep.hpp  boundary.hpp  types.hpp
heat3d_mpi/kokkos/: CMakeLists.txt  Config.hpp  Heat3d.cpp  Init.hpp  MPI_Comm.hpp  Timestep.hpp
heat3d_mpi/openacc/: CMakeLists.txt  Heat3d.cpp  Init.hpp  MPI_Comm.hpp  Types.hpp
heat3d_mpi/openmp/: CMakeLists.txt  Config.hpp  Heat3d.cpp  Helper.hpp  Init.hpp  MPI_Comm.hpp  Timestep.hpp  Types.hpp
heat3d_mpi/thrust/: CMakeLists.txt  Config.hpp  Heat_kernel.hpp  Init.hpp  MPI_Comm.hpp  Timestep.hpp  Types.hpp
lib/kokkos/: CMakeLists.txt  FFT.hpp  Kokkos_Cuda_FFT.hpp  Kokkos_Cuda_Transpose.hpp  Kokkos_HIP_FFT.hpp  Kokkos_HIP_Transpose.hpp  Kokkos_OpenMP_FFT.hpp  Kokkos_OpenMP_Transpose.hpp  Transpose.hpp
lib/openacc/: CMakeLists.txt  FFT.hpp  OpenACC_FFT.hpp  OpenACC_Transpose.hpp  OpenACC_View.hpp  OpenMP_FFT.hpp  OpenMP_Transpose.hpp  Transpose.hpp  View.hpp
lib/openmp/: CMakeLists.txt  FFT.hpp  OpenMP_Cuda_FFT.hpp  OpenMP_Cuda_Transpose.hpp  OpenMP_FFT.hpp  OpenMP_HIP_FFT.hpp  OpenMP_Transpose.hpp  OpenMP_View.hpp  Transpose.hpp  Utils.hpp  View.hpp
lib/thrust/: CMakeLists.txt  Cuda_FFT.hpp  Cuda_Parallel_For.hpp  Cuda_Transpose.hpp  FFT.hpp  HIP_FFT.hpp  HIP_Parallel_For.hpp  HIP_Transpose.hpp  OpenMP_FFT.hpp  OpenMP_Parallel_For.hpp  OpenMP_Transpose.hpp  Parallel_For.hpp  Parallel_For____.hpp  Parallel_Reduce.hpp  Thrust_Parallel_For.hpp  Thrust_Parallel_Reduce.hpp  Transpose.hpp  Utils.hpp  View.hpp  thrust_parallel_for.hpp  view__.hpp
miniapps/: CMakeLists.txt
miniapps/heat3d/: Parser.hpp
miniapps/heat3d/kokkos/: heat3d.cpp  types.hpp
miniapps/heat3d/openacc/: CMakeLists.txt  Timestep.hpp
miniapps/heat3d/openmp/: Init.hpp
miniapps/heat3d/stdpar/: Heat_kernel.hpp  Init.hpp  types.hpp  utils.hpp
miniapps/heat3d/thrust/: Heat_kernel.hpp  heat3D.cpp  types.hpp
miniapps/heat3d_mpi/kokkos/: IO.hpp  Timestep.hpp  tiles.h
miniapps/heat3d_mpi/openacc/: Init.hpp  Timestep.hpp
miniapps/heat3d_mpi/openmp/: CMakeLists.txt  Init.hpp  MPI_Comm.hpp
miniapps/heat3d_mpi/stdpar/: CMakeLists.txt  Heat3d.cpp  Heat_kernel.hpp  Init.hpp  MPI_Comm.hpp  Timestep.hpp  Types.hpp
miniapps/heat3d_mpi/thrust/: CMakeLists.txt  Heat_kernel.hpp  Init.hpp  MPI_Comm.hpp  Timestep.hpp
miniapps/vlp4d/kokkos/: advection.hpp  config.hpp  diags.hpp  efield.cpp  field.cpp  index.h  init.cpp  tiles.hpp  types.hpp  vlp4d.cpp
miniapps/vlp4d/openacc/: CMakeLists.txt  diags.cpp  efield.hpp  field.cpp  init.cpp
miniapps/vlp4d/openmp/: advect.hpp  diags.cpp  efield.cpp  init.hpp  types.hpp  vlp4d.cpp
miniapps/vlp4d/stdpar/: CMakeLists.txt  efield.cpp  efield.hpp  field.cpp  field.hpp  init.cpp  types.hpp  vlp4d.cpp
miniapps/vlp4d/thrust/: CMakeLists.txt  advection.hpp  efield.cpp  efield.hpp  init.cpp  types.hpp  utils.hpp
miniapps/vlp4d_mpi/kokkos/: Config.hpp  Diags.cpp  Diags.hpp  Field.cpp  Field.hpp  Spline.hpp  Timestep.hpp  Tuning.hpp  Types.hpp  Vlp4d.cpp  tiles.h
miniapps/vlp4d_mpi/openacc/: CMakeLists.txt  Diags.cpp  Efield.cpp  Init.cpp  Math.hpp  Spline.hpp  Timestep.hpp  Types.hpp
miniapps/vlp4d_mpi/openmp/: CMakeLists.txt  Communication.cpp  Communication.hpp  Config.hpp  Diags.cpp  Diags.hpp  Math.hpp  (+4 more)
tests/: CMakeLists.txt
tests/openacc/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_view.cpp
tests/openmp/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_view.cpp
tests/stdpar/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_view.cpp
tests/thrust/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_view.cpp
vlp4d/kokkos/: CMakeLists.txt  advection.hpp  diags.cpp  efield.hpp  field.cpp  init.hpp  timestep.hpp  types.hpp  vlp4d.cpp
vlp4d/openacc/: CMakeLists.txt  advect.hpp  efield.cpp  field.cpp  field.hpp  init.cpp  timestep.hpp  types.hpp  vlp4d.cpp
vlp4d/openmp/: CMakeLists.txt  advect.hpp  config.hpp  diags.hpp  efield.hpp  field.cpp  field.hpp  init.cpp  types.hpp
vlp4d/stdpar/: CMakeLists.txt  advection.hpp  diags.cpp  efield.cpp  field.cpp  field.hpp  timestep.hpp  types.hpp  vlp4d.cpp
vlp4d/thrust/: CMakeLists.txt  advection.hpp  diags.cpp  diags.hpp  efield.cpp  field.cpp  timestep.hpp  types.hpp  vlp4d.cpp
vlp4d_mpi/: CMakeLists.txt  Parser.hpp  Timer.hpp
vlp4d_mpi/kokkos/: Advection.hpp  CMakeLists.txt  Communication.cpp  Communication.hpp  Diags.cpp  Diags.hpp  Efield.cpp  Efield.hpp  Field.cpp  Field.hpp  Init.cpp  Init.hpp  Math.hpp  Spline.cpp  Tile_size_tuning.hpp  Timestep.hpp  Tuning.hpp  Vlp4d.cpp
vlp4d_mpi/openacc/: Advection.hpp  Advection_A64FX.hpp  CMakeLists.txt  Communication.cpp  Communication.hpp  Diags.cpp  Efield.hpp  Field.cpp  Init.cpp  Init.hpp  Spline.hpp  Timestep.hpp  Types.hpp  Vlp4d.cpp
vlp4d_mpi/openmp/: Advection.hpp  Advection_A64FX.hpp  CMakeLists.txt  Communication.cpp  Communication.hpp  Diags.cpp  Diags.hpp  Efield.hpp  Field.cpp  Init.cpp  Math.hpp  Spline.hpp  Timestep.hpp  Types.hpp  Vlp4d.cpp
vlp4d_mpi/stdpar/: Advection.hpp  CMakeLists.txt  Communication.hpp  Diags.cpp  Diags.hpp  Efield.hpp  Field.cpp  Field.hpp  Init.cpp  Math.hpp  Spline.hpp  Timestep.hpp  Types.hpp  Vlp4d.cpp
vlp4d_mpi/thrust/: Advection.hpp  CMakeLists.txt  Communication.cpp  Communication.hpp  Diags.cpp  Diags.hpp  Field.cpp  Field.hpp  Init.cpp  Init.hpp  Spline.hpp  Timestep.hpp  Types.hpp  Vlp4d.cpp
(+184 files in other folders)
