set(PROGRAMMING_MODEL AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")

if(PROGRAMMING_MODEL STREQUAL "CUDA")
    add_subdirectory(cuda)
elseif(PROGRAMMING_MODEL STREQUAL "HIP")
    add_subdirectory(hip)
elseif(PROGRAMMING_MODEL STREQUAL "OPENMP")
    add_subdirectory(openmp)
elseif(PROGRAMMING_MODEL STREQUAL "OPENACC")
    add_subdirectory(openacc)
elseif(PROGRAMMING_MODEL STREQUAL "KOKKOS")
    add_subdirectory(kokkos)
elseif(PROGRAMMING_MODEL STREQUAL "STDPAR")
    add_subdirectory(stdpar)
elseif(PROGRAMMING_MODEL STREQUAL "THRUST")
    add_subdirectory(thrust)
else()
    message(FATAL_ERROR "No parallel backend specified. One of CUDA, HIP, OPENMP, OPENACC, KOKKOS, STDPAR, and THRUST must be On.")
endif()
